2003-01-16  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): Use
	GL(dl_tls_dtv_slotinfo_list) != NULL to check whether TLS has
	been already initialized.

2003-01-15  Dmitry V. Levin  <ldv@altlinux.org>

	* sysdeps/unix/sysv/linux/ptsname.c: Fix typo in comment.

2003-01-16  Jakub Jelinek  <jakub@redhat.com>

	* posix/regcomp.c (re_compile_internal): If clearing buffer, clear
	allocated too.  Reported by Al Viro <aviro@redhat.com>.

2003-01-16  Roland McGrath  <roland@redhat.com>

	Tweak merged .abilist file format to merge duplicate symbols in
	different sets into multi-version stanzas with new "| SET regexp..."
	header continuation lines.
	* scripts/merge-abilist.awk: Rewritten for new format.
	* scripts/extract-abilist.awk: Likewise.

2003-01-15  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c (nscd_run): Remove bogus return which isn't
	necessary with gcc 3.2+.
	(nscd_init): Don't use error() to print message, use dbg_log.

	* iconv/gconv_simple.c (STORE_REST): Explicitly store the total
	expected size into state.
	(UNPACK_BYTES): Do the reverse.
	* iconv/loop.c: Use CLEAR_STATE if defined to clear __state element.
	* wcsmbs/tst-mbrtowc.c (utf8_test_1): Add test for the bug.
	Reported by Al Viro <aviro@redhat.com>.

	* stdio-common/Makefile (tests): Add bug14.
	* stdio-common/bug14.c: New file.

	* stdio-common/vfscanf.c: When recognizing multibyte characters in
	string reset the byte counter after mbrtowc reported it is not a
	partial character.  Reported by Al Viro <aviro@redhat.com>.

2003-01-15  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc64/socket.S: Include
	sysdep-cancel.h, not sysdep.h.

2003-01-15  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c (nscd_run): Protect accept call with
	TEMP_FAILURE_RETRY.

2003-01-15  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/Makefile: Include $(common-objpfx)s-proto-bp.d.
	(common-generated): Add s-proto-bp.d.